fixed wrongly cropped image and carrousel indicators position

--- a/app/globals.css
+++ b/app/globals.css
@@ -186,3 +186,17 @@ body {
 .carousel .control-next.control-arrow:before {
   border-left: 8px solid #000;
 }
+
+.carousel .carousel-status {
+  display: none;
+}
+
+.carousel .carousel .control-dots {
+  bottom: -50px;
+}
+
+.carousel .carousel .control-dots .dot {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 12px;
+  height: 12px;
+}
